[package]
name = "webcraft"
version = "0.1.0"
authors = ["Flame Allow <whynothoonhuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4.3"
futures = "0.3"

[lib]
name = "webcraft"
path = "src/lib.rs"
crate-type=["rlib", "cdylib"]