[package]
name = "webcraft"
version = "0.2.0"
authors = ["Flame Allow <whynothoonhuh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.8", features = ["full"] }
hyper-timeout = "0.4.1"
hyper-tls = "0.5"
futures = "0.3"

[lib]
name = "webcraft"
path = "src/lib.rs"
crate-type=["rlib", "cdylib"]